Bug 449933 - "powered by wetter.com" link leads to wetter.com homepage, not the page for your city
Summary: "powered by wetter.com" link leads to wetter.com homepage, not the page for y...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: 5.24.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-10 12:07 UTC by Philippe ROUBACH
Modified: 2023-12-28 14:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.91.90
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2022-02-10 12:07:11 UTC
STEPS TO REPRODUCE
1. in weather applet clic on the link"powered by wetter.com"
2. 
3. 

OBSERVED RESULT

You get the wetter.com home page.
With BBC weather, you get the weather of the selected town.

EXPECTED RESULT

You get the page of the weather for the town selected in the widget
as you get if you use BBC weather.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

kde gears 21.12.2
Comment 1 Philippe ROUBACH 2022-02-11 11:06:05 UTC
Same problem with www.dwd.de .
Comment 2 Philippe ROUBACH 2022-02-11 12:26:31 UTC
For example with BBC weather you get this link:

https://www.bbc.com/weather/3031582
Comment 3 Philippe ROUBACH 2022-04-27 06:45:23 UTC
kde gear 22.04.0

KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.2

Problem still there
Comment 4 Philippe ROUBACH 2022-10-17 08:03:49 UTC
Operating System: openSUSE Tumbleweed 20221014
KDE Plasma Version: 5.26.0
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
KDE gears 22.08.2

problem still there
Comment 5 Philippe ROUBACH 2023-12-18 12:04:00 UTC
Operating System: openSUSE Tumbleweed 20231215
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.112.0
Qt Version: 5.15.11
KDE GEARS 23.08.4

Problem still there.
Comment 6 Bug Janitor Service 2023-12-27 18:12:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3728
Comment 7 Philippe ROUBACH 2023-12-28 08:16:24 UTC
Remind comment #1

same problem with www.dwd.de
Comment 8 Ismael Asensio 2023-12-28 14:17:23 UTC
Git commit 7c169d1410dbf695d633dd8dfd4f88024518d1f1 by Ismael Asensio.
Committed on 28/12/2023 at 15:04.
Pushed by iasensio into branch 'master'.

dataengines/weather: Specify forecast link for wetter.com

Currently 'wetter.com' doesn't provide a link to the place
forecast, just to their homepage.

We can build and offer such link using the place id, so the
behavior is similar to other providers.
FIXED-IN: 5.91.90

M  +1    -1    dataengines/weather/ions/wetter.com/ion_wettercom.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7c169d1410dbf695d633dd8dfd4f88024518d1f1