dataengines/weather: Specify forecast link for wetter.com

Currently 'wetter.com' doesn't provide a link to the place
forecast, just to their homepage.

We can build and offer such link using the place id, so the
behavior is similar to other providers.

BUG: 449933
FIXED-IN: 5.91.90